# simple-file-repository

./: .coveragerc  .flake8  .gitignore  CHANGELOG.rst  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
simple_file_repository/: __init__.py  exceptions.py  filestorage.py  photostorage.py  photostorages.py  s3storage.py  storage.py  utils.py
tests/: conftest.py  test_file.py  test_photo.py  test_s3.py  test_utils.py
