[tool.poetry]
name = "simple-file-repository"
version = "0.2.0"
description = "A simple file and photo repository."
authors = ["theirix <theirix@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
    "Programming Language :: Python"]

[tool.poetry.dependencies]
python = "^3.5"
boto3 = "^1.14.53"
requests = "^2.24.0"
filemagic = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.6.0"
boto3-stubs = "*"
moto = "^1.3.16"  # further versions do not work with moto <=1.3.16
responses = '0.12.0'
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = ["invalid-name", "too-many-arguments", "too-few-public-methods",
    "missing-module-docstring"
]
