[tool.poetry]
name = "simple-file-repository"
version = "0.10.0"
description = "A simple file and photo repository."
authors = ["theirix <theirix@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
    "Programming Language :: Python"]

[tool.poetry.dependencies]
python = "^3.7,<=3.12"
boto3 = "~1"
requests = "~2"
filemagic = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pylint = "^2.6.0"
moto = { version = "~4", extras=["s3"] }
responses = '^0.22.0'
pytest-cov = "^4"
flake8 = "^5"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = ["invalid-name", "too-many-arguments", "too-few-public-methods",
    "missing-module-docstring", "consider-using-f-string"
]
