[tool.poetry]
name = "simple-file-repository"
version = "0.10.0"
description = "A simple file and photo repository."
authors = ["theirix <theirix@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
    "Programming Language :: Python"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
boto3 = "~1"
requests = "~2"
filemagic = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pylint = "^3.2.7"
moto = { version = "~4", extras=["s3"] }
responses = '^0.22.0'
pytest-cov = "^4"
flake8 = "^6"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.3.0"
docutils = "!=0.21.post1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = ["invalid-name",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-positional-arguments",
    "missing-module-docstring",
    "missing-function-docstring",
    "consider-using-f-string",
    "use-dict-literal"
]

[project.urls]
Homepage = "https://github.com/theirix/simple-file-repository"
Repository = "https://github.com/theirix/simple-file-repository"

[tool.isort]
profile = "black"